# zipr

./: README.md  benchmark.py  pyproject.toml  spec.md
council/: __init__.py  config.py  run.py  session.py  storage.py  think.py
council/agents/: __init__.py  codex.py  herald.py  kronos.py  loom.py  verity.py
council/dashboard/: index.html  server.py
council/laws/sessions/: s20260316_023301.jsonl
demo/: agents.py  client.py  server.py
zipr/: __init__.py  __main__.py  bus.py  compress.py  core.py  middleware.py  net.py  schema.py
