[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zipr"
version = "0.1.0"
description = "Token-efficient communication protocol for AI agent networks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "llm", "protocol", "multi-agent"]
dependencies = []

[project.optional-dependencies]
demo = ["anthropic>=0.84"]
bench = ["tiktoken>=0.7"]
dev  = ["anthropic>=0.84", "tiktoken>=0.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["zipr*"]
